--- a/src/components/dvr/views/bitmovin.html
+++ b/src/components/dvr/views/bitmovin.html
@@ -1,3 +1,5 @@
-<div class="col-sm-6">
-    <div id="bitmovin-player" width="100%" height="auto"></div>
+<div class="row">
+    <div class="col-sm-offset-3 col-sm-6">
+        <div id="bitmovin-player" width="100%" height="auto"></div>
+    </div>
 </div>
