--- a/src/components/dvr/views/dvr.html
+++ b/src/components/dvr/views/dvr.html
@@ -1,4 +1,4 @@
-<h1 class="text-center">DVR Testseite</h1>
+<h1 class="text-center" translate="dvr.headline"></h1>
 <bitmovin></bitmovin>
 <row>
     <form name="dvrVm.form" novalidate>
@@ -9,8 +9,8 @@
                 <button type="submit"
                         class="btn btn-default"
                         ng-click="dvrVm.submit()"
-                        ng-disabled="dvrVm.form.$invalid">
-                    Submit
+                        ng-disabled="dvrVm.form.$invalid"
+                        translate="dvr.form.button">
                 </button>
             </formly-form>
         </div>
